--- a/templates/owner.html
+++ b/templates/owner.html
@@ -2,93 +2,107 @@
 <html lang="en">
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Keypin - Your Items</title>
+    <title>KeyPin - Find your lost items!</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/assets/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/stylish-portfolio.css" rel="stylesheet">
+    <link href="../static/assets/css/stylish-portfolio.css" rel="stylesheet">
+    <link rel="stylesheet" href="../static/assets/css/main.css">
+
+    <!-- PureCSS -->
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
 
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="../static/assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic"
+    rel="stylesheet" type="text/css">
 
     <!--Firebase-->
     <script src="https://cdn.firebase.com/js/client/2.4.1/firebase.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../static/assets/js/main.js"></script>
+
+
+    <!-- jQuery -->
+    <script src="../static/assets/js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="../static/assets/js/bootstrap.min.js"></script>
 
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
 </head>
+
 <div>
     <button type="button" class="btn btn-lg btn-dark" onclick="fblogout()">FACEBOOK LOGOUT</button>
 </div>
 
+
+<script type="text/javascript">
+    function additem() {
+        var npath = "items/";
+        var item_id = document.getElementById('item_id_form').value;
+        var pref = ref.child(npath+item_id);
+        pref.set({
+            "name": document.getElementById('item_name_form').value,
+            "owner_id": "{{fbid}}"
+        });
+    }
+</script>
+
+
 <body>
-    <!-- Owner -->
-    <section id="portfolio" class="portfolio">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h2>Your Items</h2>
-                    <hr class="small">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg" title="img/portfolio-1.jpg">
-                                    <p>ID: </p>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg" title="img/portfolio-2.jpg">
-                                    <p>ID: </p>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg" title="img/portfolio-3.jpg">
-                                    <p>ID: </p>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg" title="img/portfolio-4.jpg">
-                                    <p>ID: </p>
-                                </a>
-                            </div>
+
+    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Add New Item</button>
+
+    <!-- Modal -->
+    <div id="myModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title centered">New Item</h4>
+                </div>
+                <div class="modal-body">
+                    <div>
+                        <form class="pure-form pure-form-aligned">
+                            <fieldset>
+                                <div class="pure-control-group">
+                                    <label for="item_name_form">Name</label>
+                                    <input id="item_name_form" type="text" placeholder="Name" class="item-input">
+                                </div>
+
+                                <div class="pure-control-group">
+                                    <label for="item_id_form">ID</label>
+                                    <input id="item_id_form" type="text" placeholder="ID" class="item-input">
+                                </div>
+                            </fieldset>
                         </div>
                     </div>
-                    <!-- /.row (nested) -->
-                    <a href="#" class="btn btn-dark">View More Items</a>
-                </div>
-                <!-- /.col-lg-10 -->
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-dark" data-dismiss="modal" onclick="additem()">Submit</button>
+                    </div>
+                </form>
             </div>
-            <!-- /.row -->
         </div>
-        <!-- /.container -->
-    </section>
+    </div>
+    
+
 
     <!-- Footer -->
     <footer>
@@ -122,11 +136,6 @@
         </div>
     </footer>
 
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
 
     <!-- Custom Theme JavaScript -->
     <script>
@@ -158,7 +167,7 @@
             }
         });
     });
-    </script>
+</script>
 
 </body>
 
