--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,13 @@
     <!-- PureCSS -->
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
 
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
+
+
     <!-- Custom Fonts -->
     <link href="../static/assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic"
@@ -41,32 +48,6 @@
 </head>
 
 <body>
-
-<!--Navigation -->
-<!--<a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>-->
-<!--<nav id="sidebar-wrapper">-->
-<!--<ul class="sidebar-nav">-->
-<!--<a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>-->
-<!--<li class="sidebar-brand">-->
-<!--<a href="#top"  onclick = $("#menu-close").click(); >Start Bootstrap</a>-->
-<!--</li>-->
-<!--<li>-->
-<!--<a href="#top" onclick = $("#menu-close").click(); >Home</a>-->
-<!--</li>-->
-<!--<li>-->
-<!--<a href="#about" onclick = $("#menu-close").click(); >About</a>-->
-<!--</li>-->
-<!--<li>-->
-<!--<a href="#services" onclick = $("#menu-close").click(); >Services</a>-->
-<!--</li>-->
-<!--<li>-->
-<!--<a href="#portfolio" onclick = $("#menu-close").click(); >Portfolio</a>-->
-<!--</li>-->
-<!--<li>-->
-<!--<a href="#contact" onclick = $("#menu-close").click(); >Contact</a>-->
-<!--</li>-->
-<!--</ul>-->
-<!--</nav>-->
 
 <!-- Header -->
 <header id="top" class="header">
@@ -89,6 +70,25 @@
         </form>
     </div>
 </header>
+
+
+<div class="row">
+    <form class="col s12">
+        <div class="row">
+            <div class="input-field col s12">
+                <input id="password" type="password" class="validate">
+                <label for="password">Password</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <input id="email" type="email" class="validate">
+                <label for="email">Email</label>
+            </div>
+        </div>
+    </form>
+</div>
+
 
 <!-- About -->
 <section id="about" class="about">
@@ -246,83 +246,6 @@
     <!-- /.container -->
 </section>
 
-<!-- Callout -->
-<!--<aside class="callout">-->
-<!--<div class="text-vertical-center">-->
-<!--<h1>Vertically Centered Text</h1>-->
-<!--</div>-->
-<!--</aside>-->
-
-<!-- Portfolio -->
-<!--<section id="portfolio" class="portfolio">-->
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-lg-10 col-lg-offset-1 text-center">-->
-<!--<h2>Our Work</h2>-->
-<!--<hr class="small">-->
-<!--<div class="row">-->
-<!--<div class="col-md-6">-->
-<!--<div class="portfolio-item">-->
-<!--<a href="#">-->
-<!--<img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">-->
-<!--</a>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="col-md-6">-->
-<!--<div class="portfolio-item">-->
-<!--<a href="#">-->
-<!--<img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">-->
-<!--</a>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="col-md-6">-->
-<!--<div class="portfolio-item">-->
-<!--<a href="#">-->
-<!--<img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">-->
-<!--</a>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="col-md-6">-->
-<!--<div class="portfolio-item">-->
-<!--<a href="#">-->
-<!--<img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">-->
-<!--</a>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--&lt;!&ndash; /.row (nested) &ndash;&gt;-->
-<!--<a href="#" class="btn btn-dark">View More Items</a>-->
-<!--</div>-->
-<!--&lt;!&ndash; /.col-lg-10 &ndash;&gt;-->
-<!--</div>-->
-<!--&lt;!&ndash; /.row &ndash;&gt;-->
-<!--</div>-->
-<!--&lt;!&ndash; /.container &ndash;&gt;-->
-<!--</section>-->
-
-<!-- Call to Action -->
-<!--<aside class="call-to-action bg-primary">-->
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-lg-12 text-center">-->
-<!--<h3>The buttons below are impossible to resist.</h3>-->
-<!--<a href="#" class="btn btn-lg btn-light">Click Me!</a>-->
-<!--<a href="#" class="btn btn-lg btn-dark">Look at Me!</a>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</aside>-->
-
-<!-- Map -->
-<!--<section id="contact" class="map">-->
-<!--<iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"-->
-<!--src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>-->
-<!--<br/>-->
-<!--<small>-->
-<!--<a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>-->
-<!--</small>-->
-<!--</iframe>-->
-<!--</section>-->
 
 <!-- Footer -->
 <footer>
