--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,21 @@
     <!-- PureCSS -->
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
 
+    <!-- jQuery -->
+    <script src="../static/assets/js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="../static/assets/js/bootstrap.min.js"></script>
+
+
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="../static/assets/css/materialize.min.css">
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="../static/assets/js/materialize.min.js"></script>
+
+
+
     <!-- Custom Fonts -->
     <link href="../static/assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic"
@@ -40,29 +55,53 @@
 
 </head>
 
+<script>
+    $(document).ready(function() {
+        $('select').material_select();
+    });
+</script>
 <body>
 
 <!-- Header -->
 <header id="top" class="header">
+    <!--<div class="text-vertical-center">-->
+        <!--<h1>KeyPin</h1>-->
+        <!--<h3>Keeping your items safe</h3>-->
+        <br>
+        <!--&lt;!&ndash;<a href="#about" class="btn btn-dark btn-lg">Find Out More</a>&ndash;&gt;-->
+        <!--<form class="pure-form">-->
+            <!--<div class="centered">-->
+                <!--<input type="text" placeholder="id number" class="id-input">-->
+            <!--</div>-->
+            <!--<div><br></div>-->
+            <!--<div>-->
+                <!--<button type="submit" class="btn">Submit</button>-->
+                <!--<a href="#about" class="btn">About</a>-->
+                <!--<button type="button" onclick="fblogin()">FACEBOOK</button>-->
+            <!--</div>-->
+        <!--</form>-->
+    </div>
+
     <div class="text-vertical-center">
         <h1>KeyPin</h1>
         <h3>Keeping your items safe</h3>
-        <br>
-        <!--<a href="#about" class="btn btn-dark btn-lg">Find Out More</a>-->
-        <form class="pure-form">
-            <div class="centered">
-                <input type="text" placeholder="id number" class="id-input">
-            </div>
-            <div><br></div>
-            <div>
-                <button type="submit" class="btn btn-lg btn-dark">Submit</button>
-                <!--<button type="button" class="pure-button pure-button-primary" onclick="window.location.href='#about'">About</button>-->
-                <a href="#about" class="btn btn-lg btn-dark">About</a>
-                <button type="button" class="btn btn-lg btn-dark" onclick="fblogin()">FACEBOOK</button>
+        <form class="col s12">
+            <div class="row valign">
+                <div class="input-field col s6">
+                    <input id="icon_prefix" type="text" class="validate">
+                    <label for="icon_prefix">
+                        <span class="cyan-text">First Name</span></label>
+                </div>
             </div>
         </form>
     </div>
+
+
 </header>
+
+
+
+
 
 <!-- About -->
 <section id="about" class="about">
@@ -220,83 +259,6 @@
     <!-- /.container -->
 </section>
 
-<!-- Callout -->
-<!--<aside class="callout">-->
-<!--<div class="text-vertical-center">-->
-<!--<h1>Vertically Centered Text</h1>-->
-<!--</div>-->
-<!--</aside>-->
-
-<!-- Portfolio -->
-<!--<section id="portfolio" class="portfolio">-->
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-lg-10 col-lg-offset-1 text-center">-->
-<!--<h2>Our Work</h2>-->
-<!--<hr class="small">-->
-<!--<div class="row">-->
-<!--<div class="col-md-6">-->
-<!--<div class="portfolio-item">-->
-<!--<a href="#">-->
-<!--<img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">-->
-<!--</a>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="col-md-6">-->
-<!--<div class="portfolio-item">-->
-<!--<a href="#">-->
-<!--<img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">-->
-<!--</a>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="col-md-6">-->
-<!--<div class="portfolio-item">-->
-<!--<a href="#">-->
-<!--<img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">-->
-<!--</a>-->
-<!--</div>-->
-<!--</div>-->
-<!--<div class="col-md-6">-->
-<!--<div class="portfolio-item">-->
-<!--<a href="#">-->
-<!--<img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">-->
-<!--</a>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--&lt;!&ndash; /.row (nested) &ndash;&gt;-->
-<!--<a href="#" class="btn btn-dark">View More Items</a>-->
-<!--</div>-->
-<!--&lt;!&ndash; /.col-lg-10 &ndash;&gt;-->
-<!--</div>-->
-<!--&lt;!&ndash; /.row &ndash;&gt;-->
-<!--</div>-->
-<!--&lt;!&ndash; /.container &ndash;&gt;-->
-<!--</section>-->
-
-<!-- Call to Action -->
-<!--<aside class="call-to-action bg-primary">-->
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-lg-12 text-center">-->
-<!--<h3>The buttons below are impossible to resist.</h3>-->
-<!--<a href="#" class="btn btn-lg btn-light">Click Me!</a>-->
-<!--<a href="#" class="btn btn-lg btn-dark">Look at Me!</a>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</aside>-->
-
-<!-- Map -->
-<!--<section id="contact" class="map">-->
-<!--<iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"-->
-<!--src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>-->
-<!--<br/>-->
-<!--<small>-->
-<!--<a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>-->
-<!--</small>-->
-<!--</iframe>-->
-<!--</section>-->
 
 <!-- Footer -->
 <footer>
@@ -324,11 +286,6 @@
     </div>
 </footer>
 
-<!-- jQuery -->
-<script src="js/jquery.js"></script>
-
-<!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.min.js"></script>
 
 <!-- Custom Theme JavaScript -->
 <!--<script>-->
