heroku??? + image testing + thigns

--- a/templates/index.html
+++ b/templates/index.html
@@ -270,19 +270,8 @@
                 <h4><strong>KeyPin</strong>
                 </h4>
                 <p>built with <3</p>
-                <!--<ul class="list-unstyled">-->
-                <!--<li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>-->
-                <!--<li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:name@example.com">name@example.com</a>-->
-                <!--</li>-->
-                <!--</ul>-->
-                <br>
-                <ul class="list-inline">
-                    <li>
-                        <a href="https://github.com/TheFireFerret/hackUTD2016"><i class="fa fa-github fa-fw fa-3x"></i></a>
-                    </li>
-                </ul>
                 <hr class="small">
-                <p class="text-muted">Copyright &copy; Your Website 2014</p>
+                <p class="text-muted">Copyright &copy; me 2017</p>
             </div>
         </div>
     </div>
