--- a/templates/owner.html
+++ b/templates/owner.html
@@ -23,12 +23,14 @@
     <!-- Custom Fonts -->
     <link href="../static/assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic"
-    rel="stylesheet" type="text/css">
+          rel="stylesheet" type="text/css">
 
     <!--Firebase-->
     <script src="https://cdn.firebase.com/js/client/2.4.1/firebase.js"></script>
     <script src="../static/assets/js/main.js"></script>
 
+    <!-- Animation -->
+    <link href="../static/assets/css/style.css" rel="stylesheet" type="text/css" media="screen"/>
 
     <!-- jQuery -->
     <script src="../static/assets/js/jquery.js"></script>
@@ -36,18 +38,10 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="../static/assets/js/bootstrap.min.js"></script>
 
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
 </head>
 
 <div>
-    <button type="button" class="btn btn-lg btn-dark" onclick="fblogout()">FACEBOOK LOGOUT</button>
+    <button type="button" class="btn btn-lg btn-dark home-button" onclick="fblogout()">KeyPin</button>
 </div>
 
 
@@ -55,125 +49,147 @@
     function additem() {
         var npath = "items/";
         var item_id = document.getElementById('item_id_form').value;
-        var pref = ref.child(npath+item_id);
+        var pref = ref.child(npath + item_id);
         pref.set({
             "name": document.getElementById('item_name_form').value,
             "owner_id": "{{fbid}}"
         });
 
-        $("tbody").html("");
+        var div = document.getElementById('item_table');
+        div.innerHTML = "<h2>Your Items</h2><div class=\"row\"><div class=\"col-md-6\"></div></div>";
         readitems();
     }
 
-    function readitems(){
-        ref.child("items").orderByChild("owner_id").equalTo("{{fbid}}").once("value", function(snapshot){
-            snapshot.forEach(function(itemSnap){
+    function readitems() {
+        ref.child("items").orderByChild("owner_id").equalTo("{{fbid}}").once("value", function (snapshot) {
+            snapshot.forEach(function (itemSnap) {
 //                console.log(itemSnap.val().name)
-                $("tbody").append("<tr><td>"+itemSnap.val().name+"</td></tr>");
+//                $("tbody").append("<tr><td>" + itemSnap.val().name + "</td></tr>");
+
+                var div = document.getElementById('item_table');
+                div.innerHTML = div.innerHTML + "<div id=\"mainwrapper\"><div class=\"box col-md-4\"><img src=\"../static/assets/img/portfolio-1.jpg\" class=\"img-portfolio img-responsive\"/><span class=\"caption simple-caption\" href=\"#\">"+itemSnap.val().name +"</span></div></div>";
             })
         })
     }
+
 </script>
+
+<script type="text/javascript" src="//api.filestackapi.com/filestack.js"></script>
+
+<input type="filepicker" data-fp-apikey="A1VISLPrfTcijxscOkMXoz"
+       onchange="alert(event.fpfile.url)">
 
 
 <body onload="readitems()">
-    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Add New Item</button>
+<!-- Modal -->
+<div id="myModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
 
-    <!-- Modal -->
-    <div id="myModal" class="modal fade" role="dialog">
-        <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title centered">New Item</h4>
+            </div>
+            <div class="modal-body">
+                <div>
+                    <form class="pure-form pure-form-aligned">
+                        <fieldset>
+                            <div class="pure-control-group">
+                                <label for="item_name_form">Name</label>
+                                <input id="item_name_form" type="text" placeholder="Name" class="item-input">
+                            </div>
 
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title centered">New Item</h4>
+                            <div class="pure-control-group">
+                                <label for="item_id_form">ID</label>
+                                <input id="item_id_form" type="text" placeholder="ID" class="item-input">
+                            </div>
+                        </fieldset>
+                    </form>
                 </div>
-                <div class="modal-body">
-                    <div>
-                        <form class="pure-form pure-form-aligned">
-                            <fieldset>
-                                <div class="pure-control-group">
-                                    <label for="item_name_form">Name</label>
-                                    <input id="item_name_form" type="text" placeholder="Name" class="item-input">
-                                </div>
-
-                                <div class="pure-control-group">
-                                    <label for="item_id_form">ID</label>
-                                    <input id="item_id_form" type="text" placeholder="ID" class="item-input">
-                                </div>
-                            </fieldset>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="submit" class="btn btn-dark" data-dismiss="modal" onclick="additem()">Submit</button>
-                    </div>
+            </div>
+            <div class="modal-footer">
+                <button type="submit" class="btn btn-dark" data-dismiss="modal" onclick="additem()">Submit</button>
             </div>
         </div>
     </div>
+</div>
 
 
-    <div class="table-wrapper">
-        <table class="pure-table pure-table-bordered table">
-            <thead>
-            <tr>
-                <th>Items</th>
-            </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
-    </div>
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h4><strong>Start Bootstrap</strong>
-                    </h4>
-                    <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
-                    <ul class="list-unstyled">
-                        <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:name@example.com">name@example.com</a>
-                        </li>
-                    </ul>
-                    <br>
-                    <ul class="list-inline">
-                        <li>
-                            <a href="#"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-dribbble fa-fw fa-3x"></i></a>
-                        </li>
-                    </ul>
-                    <hr class="small">
-                    <p class="text-muted">Copyright &copy; Your Website 2014</p>
+<!--<div class="table-wrapper">-->
+    <!--<table class="pure-table pure-table-bordered table">-->
+        <!--<thead>-->
+        <!--<tr>-->
+            <!--<th>Items</th>-->
+        <!--</tr>-->
+        <!--</thead>-->
+        <!--<tbody>-->
+        <!--</tbody>-->
+    <!--</table>-->
+<!--</div>-->
+
+<section id="portfolio" class="portfolio">
+    <div class="container centered">
+        <div class="row">
+            <div id="item_table" class="col-lg-10 col-lg-offset-1 text-center">
+                <h2>Your Items</h2>
+                <div class="row">
+                    <div class="col-md-6">
+                    </div>
                 </div>
+
+                <!--&lt;!&ndash; Image Caption Start Here &ndash;&gt;-->
+                <!--<div id="mainwrapper">-->
+                    <!--<div class="box col-md-4">-->
+                        <!--<img src="../static/assets/img/portfolio-1.jpg"-->
+                             <!--class="img-portfolio img-responsive"/>-->
+                <!--<span class="caption simple-caption" href="#">-->
+                    <!--Image 1-->
+                <!--</span>-->
+                    <!--</div>-->
+                <!--</div>-->
+
             </div>
         </div>
-    </footer>
+        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Add New Item</button>
+    </div>
+</section>
 
 
-    <!-- Custom Theme JavaScript -->
-    <script>
+
+<!-- Footer -->
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-10 col-lg-offset-1 text-center">
+                <h4><strong>KeyPin</strong>
+                </h4>
+                <p>built with <3</p>
+                <hr class="small">
+                <p class="text-muted">Copyright &copy; me 2017</p>
+            </div>
+        </div>
+    </div>
+</footer>
+
+
+<!-- Custom Theme JavaScript -->
+<script>
     // Closes the sidebar menu
-    $("#menu-close").click(function(e) {
+    $("#menu-close").click(function (e) {
         e.preventDefault();
         $("#sidebar-wrapper").toggleClass("active");
     });
 
     // Opens the sidebar menu
-    $("#menu-toggle").click(function(e) {
+    $("#menu-toggle").click(function (e) {
         e.preventDefault();
         $("#sidebar-wrapper").toggleClass("active");
     });
 
     // Scrolls to the selected menu item on the page
-    $(function() {
-        $('a[href*=#]:not([href=#])').click(function() {
+    $(function () {
+        $('a[href*=#]:not([href=#])').click(function () {
             if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') || location.hostname == this.hostname) {
 
                 var target = $(this.hash);
