cry about modals

--- a/templates/index.html
+++ b/templates/index.html
@@ -91,12 +91,12 @@
                 </div>
             </div>
             <div>
-                <button type="button" id="submit_button" class="btn" onclick="checkItem()">Submit</button>
-                <a href="#about" class="btn">About</a>
+                <button type="button" id="submit_button" class="btn waves-effect waves-light" onclick="checkItem()">Submit</button>
+                <a href="#about" class="btn waves-effect waves-light">About</a>
             </div>
             <div><br></div>
             <div>
-                <button type="button" class="btn blue" onclick="fblogin()">Facebook Login</button>
+                <button type="button" class="btn blue waves-effect waves-light" onclick="fblogin()">Facebook Login</button>
             </div>
         </div>
     </div>
