--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
     <script src="../static/assets/js/bootstrap.min.js"></script>
 
     <!-- PureCSS -->
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+    <!--<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">-->
 
     <!-- Custom Fonts -->
     <link href="../static/assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
