--- a/templates/owner.html
+++ b/templates/owner.html
@@ -70,6 +70,7 @@
         pref.set({
             "name": document.getElementById('item_name_form').value,
             "owner_id": "{{fbid}}"
+            "imgurl":document.getElementById('url_form').value
         });
 
         var div = document.getElementById('item_table');
