--- a/templates/owner.html
+++ b/templates/owner.html
@@ -69,7 +69,7 @@
         var pref = ref.child(npath + item_id);
         pref.set({
             "name": document.getElementById('item_name_form').value,
-            "owner_id": "{{fbid}}"
+            "owner_id": "{{fbid}}",
             "imgurl":document.getElementById('url_form').value
         });
 
